added mongodb to .env
